🎸 Fix livechat z-index

--- a/app/meteor/imports/client/css/overrides.scss
+++ b/app/meteor/imports/client/css/overrides.scss
@@ -250,3 +250,8 @@ h6,
 .s-alert-box {
   z-index: 1060 !important;
 }
+
+// Smooch livechat
+#web-messenger-container {
+  z-index: 1070;
+}
